Fixing animation overflow

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ h6 {
   padding-bottom: 20px;
 }
 
+#intro .container {
+  overflow: hidden;
+}
+
 #intro h1 {
   margin-top: 0;
   margin-bottom: 10px;
@@ -106,6 +110,13 @@ h6 {
 
 #intro .btn-cta {
   margin-top: 10px;
+}
+
+@media (max-width: 992px) {
+  #intro h1 {
+    font-size: 30px;
+    font-weight: 700;
+  }
 }
 
 @media (min-width: 768px) {
